styles/style.css
/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */

.page {
  font-family: var(--font-family-primary);
  color: var(--color-text-primary);
  background-color: var(--color-bg);
  background-image: var(--cover-bg-image);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.title-decor {
  background-color: var(--color-accent);
  color: var(--color-text-secondary);
  font-size: var(--font-size-base);
  font-weight: 700;
  line-height: 130%;
}

.link-decor {
  text-decoration: none;
  text-shadow: 2px 2px 0 var(--color-accent);
  transition: box-shadow 0.2s ease-in-out;
}

.link-decor:hover {
  box-shadow: 0 1px currentColor;
}

.decorated-zone::before {
  position: absolute;
  inline-size: 25px;
  block-size: 25px;
  inset-block-start: var(--content-inline-padding);
  inset-inline-end: var(--content-inline-padding);
  border-block-start: 1px solid var(--color-accent);
  border-inline-end: 1px solid var(--color-accent);
  content: '';
}

.decorated-zone::after {
  position: absolute;
  inline-size: 25px;
  block-size: 25px;
  inset-inline-start: var(--content-inline-padding);
  inset-block-end: var(--content-inline-padding);
  border-block-end: 1px solid var(--color-accent);
  border-inline-start: 1px solid var(--color-accent);
  content: '';
}

.header {
  position: relative;
  margin-block-end: 40px;
  padding: var(--content-inline-padding);
  block-size: 100vh;
  display: grid;
  grid-template-rows: 1fr min-content 1fr;
  align-content: space-between;
}

.header__bulb {
  position: absolute;
  inset-block-start: calc(var(--content-inline-padding) + 4px);
  inset-inline-end: calc(var(--content-inline-padding) + 8px);
  text-transform: uppercase;
  color: var(--color-accent);
}

.header__bulb::after {
  content: '';
  margin-inline-start: 10px;
  display: inline-block;
  inline-size: 12px;
  block-size: 12px;
  border-radius: 50%;
  background-color: var(--color-accent);
  filter: drop-shadow(0 0 4px var(--color-accent));
}

.header__theme-menu {
  align-self: center;
  justify-self: end;
}

.header__theme-menu-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.header__theme-menu-button {
  padding: 0 13px;
  height: 26px;
  background-color: transparent;
  border: none;
  text-transform: lowercase;
  text-align: center;
  font-size: var(--font-size-base);
  line-height: 100%;
  color: var(--color-accent);
  cursor: pointer;
}

.header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
  outline: 1px solid var(--color-button-hover);
}

.header__theme-menu-button_active {
  outline: 1px solid currentColor;
  pointer-events: none;
  user-select: none;
}

.header__title {
  justify-self: start;
  font-size: var(--font-size-brand);
  font-weight: 700;
  font-style: normal;
  color: var(--color-brand);
  text-shadow: 4px 4px 0 var(--color-accent);
  line-height: 82.5%;
}

.header__description {
  justify-self: end;
  align-self: center;
  display: flex;
  flex-direction: column;
  line-height: 130%;
}

.content {
  padding: 0 var(--content-inline-padding);
  display: grid;
  grid-template-columns: 1fr;
  gap: 50px;
}

.content__section {
  display: grid;
  grid-template-columns: 1fr;
}

.content__title {
  inline-size: 30vw;
  color: var(--color-accent);
  font-size: var(--font-size-base);
  font-weight: 700;
}

.content__cards {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.card {
  margin-block-start: 20px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.card__title {
  text-align: left;
}

.card__description {
  font-size: var(--font-size-base);
  font-weight: 400;
  line-height: 130%;
}

.card__description-content {
  margin-block-start: 10px; /* card gap excluded */
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.card__description-content:not(:last-child) {
  margin-block-end: 20px;
}

.card__description-content-subtitle {
  background-color: var(--color-accent);
  color: var(--color-text-secondary);
  font-weight: 400;
}

.gallery__title {
  margin-block-end: 10px;
}

.gallery__image-set {
  display: grid;
  grid-template-columns: 1fr;
  gap: 10px;
}

.gallery__image {
  inline-size: 100%;
  block-size: 100%;
  object-fit: cover;
  object-position: center;
}

.footer {
  position: relative;
  margin-block-start: 40px;
  padding: var(--content-inline-padding);
  block-size: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer__title {
  font-size: var(--font-size-brand);
  font-weight: 700;
  font-style: normal;
  color: var(--color-brand);
  text-shadow: 2px 2px 0 var(--color-accent);
  line-height: 82.5%;
}

@media screen and (width >= 768px) {
  :root {
    --content-inline-padding: 20px;
  }

  .header {
    margin-block-end: 60px;
  }

  .header__description {
    max-inline-size: 50vw;
  }

  .content {
    gap: 80px;
  }

  .content__section:not(.one-column-content) {
    grid-template-columns: min-content 1fr;
    gap: 20px;
  }

  .content__section.one-column-content .content__title {
    margin-block-end: 20px;
  }

  .content__cards {
    gap: 20px;
  }

  .card {
    margin-block-start: unset;
  }

  .sunset-pic {
    grid-area: sunset-pic;
  }

  .ice-cream-pic {
    grid-area: ice-cream-pic;
  }

  .tape-pic {
    grid-area: tape-pic;
  }

  .street-pic {
    grid-area: street-pic;
  }

  .gallery__image-set {
    grid-template-columns: repeat(3, 1fr);
    grid-template-areas:
      'sunset-pic sunset-pic ice-cream-pic'
      'tape-pic books-pic ice-cream-pic'
      'tape-pic street-pic street-pic';
  }
}

@media screen and (width >= 1024px) {
  .content__section.one-column-content .content__cards {
    flex-direction: row;
  }

  .content__section.one-column-content .card {
    min-inline-size: 30vw;
  }
}

